--- a/text-em/.gitignore
+++ b/text-em/.gitignore
@@ -13,6 +13,10 @@
 
 # misc
 .DS_Store
+server/.env.local
+server/.env.development.local
+server/.env.test.local
+server/.env.production.local
 .env.local
 .env.development.local
 .env.test.local
