--- a/text-em/.gitignore
+++ b/text-em/.gitignore
@@ -13,10 +13,7 @@
 
 # misc
 .DS_Store
-server/.env.local
-server/.env.development.local
-server/.env.test.local
-server/.env.production.local
+.env
 .env.local
 .env.development.local
 .env.test.local
